day-5 task done

--- a/Frontend/styles/address.css
+++ b/Frontend/styles/address.css
@@ -11,6 +11,7 @@
   align-items: center;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  z-index: 20;
 }
 .navbar .logo {
   font-size: 35px;
@@ -20,9 +21,7 @@
 .navbar .logo img {
   width: 62px;
 }
-/* .navbar .logo img {
-          width: 100%;
-        } */
+
 .navbar > div {
   width: 30%;
   /* border: 2px solid yellow; */
@@ -102,9 +101,7 @@
   left: 463px;
   top: 23px;
 }
-.line-bar {
-  /* background-color: pink; */
-}
+
 #second {
   background-color: #ef3291;
 }
@@ -125,4 +122,231 @@
 #address {
   color: #ef3291;
   font-weight: bold;
+}
+
+/* body section is from here */
+
+/* img {
+  width: 100%;
+  height: 200px;
+  margin: auto;
+} */
+.signin-button {
+  width: 90%;
+  max-width: 100%;
+}
+#signup-container {
+  width: 85%;
+  margin: auto;
+  margin-top: 100px;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  /* border: 2px solid red; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border-radius: 20px;
+}
+#signup-container > div {
+  /* border: 2px solid blue; */
+}
+#signup-container > div:nth-child(1) {
+  margin-left: -500px;
+  /* height: 700px; */
+}
+#signup-container > div:nth-child(2) {
+  position: fixed;
+  width: 450px;
+  left: 50%;
+}
+#signup-container > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+}
+#signup-container > div:nth-child(2) > div {
+  /* border: 2px solid red; */
+  margin-bottom: 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  /* height: 400px; */
+}
+#signup-container > div:nth-child(2) > div:nth-child(1) {
+  height: 150px;
+}
+#signup-container > div:nth-child(2) > div:nth-child(2) {
+  height: 350px;
+}
+.signup-image-section {
+  height: 250px;
+}
+.signup-image-section img {
+  height: 100%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.signup-input-container {
+  /* border: 2px solid rgb(0, 0, 0); */
+  padding: 8px;
+}
+.signup-input-container .signup-text {
+  padding-bottom: 8px;
+}
+.inputField {
+  position: relative;
+  width: 100%;
+  font-size: 18px;
+  color: rgb(255, 0, 119);
+  font-family: sans-serif;
+  border-bottom: 0.5px solid rgb(194, 108, 122);
+  /* border: 2px solid green; */
+  margin: auto;
+}
+
+.inputField input {
+  padding: 8px 20px;
+  padding-top: 28px;
+  /* border: 1.8px solid rgba(107, 107, 107, 0.4); */
+  border-radius: 3px;
+  border: none;
+  width: 90%;
+  color: black;
+  font-size: 20px;
+  color: rgb(54, 38, 46);
+}
+
+.inputField input:focus {
+  /* border-bottom: 0.5px solid #ec49b6; */
+  outline: none;
+}
+
+.inputField span {
+  pointer-events: none;
+  opacity: 0.5;
+  position: absolute;
+  padding-left: 20px;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  cursor: text;
+}
+
+.inputField input:focus + span,
+.inputField input:not(:placeholder-shown) + span {
+  top: 7px;
+  -webkit-transform: scale(0.7) translateY(-10%) translateX(-8.5px);
+  transform: scale(0.7) translateY(-10%) translateX(-8.5px);
+}
+
+.inputField input,
+.inputField span {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+a {
+  text-align: center;
+  margin: auto;
+  margin-left: 10px;
+  /* color: white; */
+  text-decoration: none;
+  font-size: large;
+  padding: auto;
+}
+#navt {
+  padding: 30px 30px 30px 30px;
+}
+
+.submit-address-button {
+  width: 90%;
+  height: 60px;
+  background-color: deeppink;
+  border: none;
+  display: block;
+  margin: auto;
+  border-radius: 8px;
+  font-family: sans-serif;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+.signup-text {
+  font-family: sans-serif;
+  font-size: 24px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.674);
+  border-bottom: 1px solid #888;
+}
+
+.meesho-privacy-policy-warning {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 12px;
+}
+.meesho-privacy-policy-warning a {
+  color: deeppink;
+  font-size: 12px;
+}
+
+/* contact details part is here */
+.contact-details {
+  color: rgba(0, 0, 0, 0.674);
+  font-family: sans-serif;
+  font-size: 18px;
+  margin: 25px 0px -20px 15px;
+}
+.signup-input-container #form div:nth-child(4) {
+  border: 2px solid red;
+  /* margin-top: -20px; */
+}
+
+/* price details part is here */
+.price-details {
+  font-family: sans-serif;
+  /* font-weight: bold; */
+}
+
+.price-details > div:nth-child(1),
+.price-details > div:nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.price-details > div:nth-child(1) {
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(211, 197, 184);
+}
+.price-details > div:nth-child(2) {
+  font-weight: 700;
+}
+
+/* delivery details are here */
+.delivery-details {
+  border: 2px solid orange;
+  display: none;
+  display: block;
+  padding-bottom: 8px;
+}
+
+.delivery-details > div:nth-child(2) {
+  /* border: 2px solid rgb(47, 255, 0); */
+  padding-left: 32px;
+}
+.delivery-details > div:nth-child(1) {
+  border-bottom: 2px solid #888;
+  font-size: 19px;
+  font-family: sans-serif;
+  font-weight: bold;
+  padding: 15px 0px 5px 32px;
+}
+.delivery-details > div:nth-child(2) span {
+  color: #000000;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: sans-serif;
 }
